<resources>
    <string name="app_name">GetOut!</string>
    <string name="title">Title</string>
    <string name="hour">Hour</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="participants">Participants</string>
    <string name="currentPart">Current Participants</string>
    <string name="joinButton">Join</string>
    <string name="author">Author</string>
    <string name="userName">Username</string>
    <string name="edit">Edit</string>
    <string name="join">Join</string>
    <string name="delete">Delete</string>

    <string-array name="event_types">
        <item>Sport</item>
        <item>Transportation</item>
        <item>Meal</item>
        <item>Game</item>
        <item>Group Work</item>
    </string-array>
</resources>
