<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        app:cardElevation="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/cardview_compat_inset_shadow"
        android:layout_marginBottom="@dimen/cardview_compat_inset_shadow">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userImageOnEvent" />

            <TextView
                android:id="@+id/hour"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/hour"
                app:layout_constraintStart_toEndOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/attenders" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attenders" />

            <TextView
                android:id="@+id/attenders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:text="@string/participants"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="101dp"
                android:layout_height="113dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/calendar_colored" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:text="@string/author"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintStart_toEndOf="@+id/userImageOnEvent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/userImageOnEvent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/location"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/info" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>