<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:background="@color/white"


    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageDescription"
        android:layout_width="30dp"
        android:layout_height="30dp"

        app:layout_constraintEnd_toStartOf="@+id/dDescription"
        app:layout_constraintTop_toTopOf="@+id/dDescription"
        app:srcCompat="@drawable/info" />

    <ImageView
        android:id="@+id/imageParticipants"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageLocation"
        app:layout_constraintStart_toStartOf="@+id/imageLocation"
        app:layout_constraintTop_toBottomOf="@+id/imageLocation"
        app:srcCompat="@drawable/participants" />

    <ImageView
        android:id="@+id/imageLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageCalendar"
        app:layout_constraintStart_toStartOf="@+id/imageCalendar"
        app:layout_constraintTop_toBottomOf="@+id/imageCalendar"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/currentNumber"
        android:layout_width="108dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/imageParticipants"
        app:layout_constraintEnd_toEndOf="@+id/dLocation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dLocation"
        app:layout_constraintTop_toTopOf="@+id/imageParticipants"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dLocation"
        android:layout_width="108dp"
        android:layout_height="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
        app:layout_constraintStart_toStartOf="@+id/dDate"
        app:layout_constraintTop_toTopOf="@+id/imageLocation" />

    <TextView
        android:id="@+id/dTitle"
        android:layout_width="337dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dDate"
        android:layout_width="83dp"
        android:layout_height="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/imageCalendar"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <TextView
        android:id="@+id/dHour"
        android:layout_width="69dp"
        android:layout_height="15dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/dDate"
        app:layout_constraintStart_toStartOf="@+id/dDate"
        app:layout_constraintTop_toBottomOf="@+id/dDate" />

    <TextView
        android:id="@+id/dDescription"
        android:layout_width="140dp"
        android:layout_height="156dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/author"
        android:layout_width="173dp"
        android:layout_height="16dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="@+id/dTitle"
        app:layout_constraintTop_toBottomOf="@+id/dTitle" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/participantRecycler"
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participants" />

    <TextView
        android:id="@+id/participants"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/currentPart"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete" />

    <!--Button for author to leave  -->
    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dDescription"
        app:layout_constraintTop_toBottomOf="@+id/dDescription"
        app:layout_constraintVertical_bias="0.0" />

    <!--Button for author to edit -->
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/button"
        android:text="@string/edit"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageParticipants"
        app:layout_constraintTop_toTopOf="@+id/delete" />

    <!--Button for author to edit -->
    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/join"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toEndOf="@+id/edit"
        app:layout_constraintTop_toTopOf="@+id/delete" />

    <ImageView
        android:id="@+id/imageCalendar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dHour"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/calendar_colored" />


</android.support.constraint.ConstraintLayout>